CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

IF(POLICY CMP0091)
    CMAKE_POLICY(SET CMP0091 NEW)
ENDIF()

PROJECT(IPD_UNIT_TEST)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE Release)

IF(MSVC)
    ADD_COMPILE_OPTIONS(/utf-8)
    SET(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
ENDIF()

IF(WIN32 AND NOT DEFINED CMAKE_GENERATOR_PLATFORM)
    SET(CMAKE_GENERATOR_PLATFORM x64)
ENDIF()

# SDK 경로 (빌드된 SDK 산출물 위치)
SET(SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../IPD_SDK/build/sdk)
SET(SDK_INCLUDE_DIR ${SDK_DIR}/include)
IF(WIN32)
    SET(SDK_LIB_DIR ${SDK_DIR}/lib/Release)
    SET(SDK_BIN_DIR ${SDK_DIR}/bin/Release)
ENDIF()

# SOURCE
ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

# INCLUDE
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    ${SDK_INCLUDE_DIR}
)

# LINK
IF(WIN32)
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
        ${SDK_LIB_DIR}/IPD_SDK.lib
    )

    # POST BUILD - DLL 복사
    ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_if_different
        "${SDK_BIN_DIR}/IPD_SDK.dll"
        $<TARGET_FILE_DIR:${PROJECT_NAME}>
        COMMENT "copying IPD_SDK.dll"
    )
ENDIF()
